--- a/TuneSearch/app/src/main/res/values/strings.xml
+++ b/TuneSearch/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">TuneSearch</string>
+    <string name="app_name" translatable="false">TuneSearch</string>
+    <string name="button_search">Search</string>
+    <string name="hint_search">Search term</string>
 </resources>
