Migrate to explicit architecture

--- a/TuneSearchCompose/app/src/main/res/values/strings.xml
+++ b/TuneSearchCompose/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">TuneSearch Compose</string>
+    <string name="image_content_desc">Album artwork</string>
 </resources>
